--- a/cs178_project.ipynb
+++ b/cs178_project.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -177,28 +177,28 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5059 - loss: 1.7724 - val_accuracy: 0.5268 - val_loss: 1.3077\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 26ms/step - accuracy: 0.4889 - loss: 1.0687 - val_accuracy: 0.5268 - val_loss: 0.9330\n",
       "Epoch 2/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5283 - loss: 1.3060 - val_accuracy: 0.5268 - val_loss: 1.1006\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5157 - loss: 0.9791 - val_accuracy: 0.5268 - val_loss: 0.9414\n",
       "Epoch 3/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5227 - loss: 1.1669 - val_accuracy: 0.5268 - val_loss: 1.0156\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5238 - loss: 0.9641 - val_accuracy: 0.5268 - val_loss: 0.9460\n",
       "Epoch 4/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5226 - loss: 1.0864 - val_accuracy: 0.5268 - val_loss: 0.9743\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5318 - loss: 0.9473 - val_accuracy: 0.5268 - val_loss: 0.9283\n",
       "Epoch 5/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 26ms/step - accuracy: 0.5276 - loss: 1.0413 - val_accuracy: 0.5268 - val_loss: 0.9648\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 26ms/step - accuracy: 0.5205 - loss: 0.9549 - val_accuracy: 0.5268 - val_loss: 0.9215\n",
       "Epoch 6/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5214 - loss: 1.0203 - val_accuracy: 0.5268 - val_loss: 0.9509\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5267 - loss: 0.9586 - val_accuracy: 0.5268 - val_loss: 0.9225\n",
       "Epoch 7/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5348 - loss: 0.9951 - val_accuracy: 0.5268 - val_loss: 0.9385\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 26ms/step - accuracy: 0.5253 - loss: 0.9572 - val_accuracy: 0.5233 - val_loss: 0.9237\n",
       "Epoch 8/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 29ms/step - accuracy: 0.5262 - loss: 0.9913 - val_accuracy: 0.5268 - val_loss: 0.9338\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5229 - loss: 0.9580 - val_accuracy: 0.5272 - val_loss: 0.9223\n",
       "Epoch 9/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 30ms/step - accuracy: 0.5266 - loss: 0.9719 - val_accuracy: 0.5268 - val_loss: 0.9296\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5179 - loss: 0.9568 - val_accuracy: 0.5268 - val_loss: 0.9213\n",
       "Epoch 10/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 29ms/step - accuracy: 0.5320 - loss: 0.9691 - val_accuracy: 0.5268 - val_loss: 0.9283\n",
-      "\u001b[1m80/80\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 8ms/step - accuracy: 0.5390 - loss: 0.9233\n",
-      "Test Accuracy: 52.68%\n",
-      "It took 90.3218641281128 seconds.\n"
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 30ms/step - accuracy: 0.5280 - loss: 0.9436 - val_accuracy: 0.5249 - val_loss: 0.9287\n",
+      "\u001b[1m80/80\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 8ms/step - accuracy: 0.5354 - loss: 0.9232\n",
+      "Test Accuracy: 52.49%\n",
+      "It took 88.57959008216858 seconds.\n"
      ]
     }
    ],
@@ -231,14 +231,14 @@
     "start = time.time()\n",
     "# Build the CNN model\n",
     "model = Sequential([\n",
-    "    Conv2D(32, (3, 3), activation='softmax', input_shape=(50, 50, 1)), \n",
+    "    Conv2D(32, (3, 3), activation='relu', input_shape=(50, 50, 1)), \n",
     "    MaxPooling2D(pool_size=(2, 2)),  \n",
     "    Dropout(0.25),\n",
-    "    Conv2D(64, (3, 3), activation='softmax'),\n",
+    "    Conv2D(32, (6, 6), activation='relu'),\n",
     "    MaxPooling2D(pool_size=(2, 2)),\n",
     "    Dropout(0.25),\n",
     "    Flatten(),\n",
-    "    Dense(128, activation='softmax'),\n",
+    "    Dense(128, activation='relu'),\n",
     "    Dropout(0.5),\n",
     "    Dense(num_classes, activation='softmax')\n",
     "])\n",
