--- a/cs178_project.ipynb
+++ b/cs178_project.ipynb
@@ -130,15 +130,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10212, 50, 50, 1, 1)\n",
-      "(2553, 50, 50, 1, 1)\n"
+      "(10212, 50, 50, 1)\n",
+      "(2553, 50, 50, 1)\n"
      ]
     }
    ],
@@ -154,8 +154,8 @@
     "# Y_val = np.reshape(Y_val, (-1, 50, 50, 1))\n",
     "X_tr = X_tr.astype('float32') / 255.0  # Scale to [0, 1]\n",
     "X_val = X_val.astype('float32') / 255.0\n",
-    "X_tr = X_tr[..., tf.newaxis]  # Shape: (num_samples, 50, 50, 1)\n",
-    "X_val = X_val[..., tf.newaxis]\n",
+    "# X_tr = X_tr[..., tf.newaxis]  # Shape: (num_samples, 50, 50, 1)\n",
+    "# X_val = X_val[..., tf.newaxis]\n",
     "\n",
     "\n",
     "print(X_tr.shape)\n",
@@ -169,47 +169,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 26ms/step - accuracy: 0.4889 - loss: 1.0687 - val_accuracy: 0.5268 - val_loss: 0.9330\n",
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/purugajare/Downloads/personal_projects/cs178_project/.venv/lib/python3.12/site-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 32ms/step - accuracy: 0.4666 - loss: 1.1971 - val_accuracy: 0.5292 - val_loss: 1.1054 - learning_rate: 0.0010\n",
       "Epoch 2/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5157 - loss: 0.9791 - val_accuracy: 0.5268 - val_loss: 0.9414\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5036 - loss: 0.9879 - val_accuracy: 0.5292 - val_loss: 1.0178 - learning_rate: 0.0010\n",
       "Epoch 3/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5238 - loss: 0.9641 - val_accuracy: 0.5268 - val_loss: 0.9460\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5168 - loss: 0.9637 - val_accuracy: 0.5292 - val_loss: 0.9768 - learning_rate: 0.0010\n",
       "Epoch 4/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5318 - loss: 0.9473 - val_accuracy: 0.5268 - val_loss: 0.9283\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 30ms/step - accuracy: 0.5202 - loss: 0.9566 - val_accuracy: 0.5307 - val_loss: 0.9687 - learning_rate: 0.0010\n",
       "Epoch 5/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 26ms/step - accuracy: 0.5205 - loss: 0.9549 - val_accuracy: 0.5268 - val_loss: 0.9215\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 30ms/step - accuracy: 0.5284 - loss: 0.9461 - val_accuracy: 0.5288 - val_loss: 0.9447 - learning_rate: 0.0010\n",
       "Epoch 6/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 28ms/step - accuracy: 0.5267 - loss: 0.9586 - val_accuracy: 0.5268 - val_loss: 0.9225\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 30ms/step - accuracy: 0.5176 - loss: 0.9545 - val_accuracy: 0.5284 - val_loss: 0.9328 - learning_rate: 0.0010\n",
       "Epoch 7/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 26ms/step - accuracy: 0.5253 - loss: 0.9572 - val_accuracy: 0.5233 - val_loss: 0.9237\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 30ms/step - accuracy: 0.5205 - loss: 0.9615 - val_accuracy: 0.5292 - val_loss: 0.9379 - learning_rate: 0.0010\n",
       "Epoch 8/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5229 - loss: 0.9580 - val_accuracy: 0.5272 - val_loss: 0.9223\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 31ms/step - accuracy: 0.5156 - loss: 0.9502 - val_accuracy: 0.5037 - val_loss: 0.9361 - learning_rate: 0.0010\n",
       "Epoch 9/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 27ms/step - accuracy: 0.5179 - loss: 0.9568 - val_accuracy: 0.5268 - val_loss: 0.9213\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 31ms/step - accuracy: 0.5206 - loss: 0.9565 - val_accuracy: 0.5292 - val_loss: 0.9377 - learning_rate: 0.0010\n",
       "Epoch 10/10\n",
-      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 30ms/step - accuracy: 0.5280 - loss: 0.9436 - val_accuracy: 0.5249 - val_loss: 0.9287\n",
-      "\u001b[1m80/80\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 8ms/step - accuracy: 0.5354 - loss: 0.9232\n",
-      "Test Accuracy: 52.49%\n",
-      "It took 88.57959008216858 seconds.\n"
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 31ms/step - accuracy: 0.5288 - loss: 0.9406 - val_accuracy: 0.5245 - val_loss: 0.9370 - learning_rate: 0.0010\n",
+      "Restoring model weights from the end of the best epoch: 6.\n",
+      "\u001b[1m80/80\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step - accuracy: 0.5285 - loss: 0.9421\n",
+      "Test Accuracy: 52.84%\n",
+      "Training took 97.714928150177 seconds.\n"
      ]
     }
    ],
    "source": [
     "# CNN\n",
     "import time\n",
+    "import numpy as np\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, BatchNormalization, GlobalAveragePooling2D\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
     "from tensorflow.keras.regularizers import l2\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
     "\n",
     "# Example data setup: replace with your own dataset\n",
     "# Assuming `X_train`, `X_test`, `y_train`, `y_test` are ready\n",
@@ -228,20 +246,29 @@
     "\n",
     "# If labels are integers (e.g., 0, 1, ..., num_classes-1), convert to one-hot\n",
     "\n",
+    "def create_model():\n",
+    "    input_shape=(50, 50, 1)\n",
+    "    num_classes=8\n",
+    "\n",
+    "    model = Sequential([\n",
+    "        Conv2D(32, (3, 3), activation='relu', input_shape=(50, 50, 1)),\n",
+    "        BatchNormalization(),\n",
+    "        MaxPooling2D(pool_size=(2, 2)),\n",
+    "        Dropout(0.25),\n",
+    "        Conv2D(64, (3, 3), activation='relu'),\n",
+    "        BatchNormalization(),\n",
+    "        MaxPooling2D(pool_size=(2, 2)),\n",
+    "        Dropout(0.25),\n",
+    "        GlobalAveragePooling2D(),\n",
+    "        Dense(128, activation='relu'),\n",
+    "        Dropout(0.5),\n",
+    "        Dense(num_classes, activation='softmax')\n",
+    "    ])\n",
+    "    return model \n",
+    "\n",
     "start = time.time()\n",
     "# Build the CNN model\n",
-    "model = Sequential([\n",
-    "    Conv2D(32, (3, 3), activation='relu', input_shape=(50, 50, 1)), \n",
-    "    MaxPooling2D(pool_size=(2, 2)),  \n",
-    "    Dropout(0.25),\n",
-    "    Conv2D(32, (6, 6), activation='relu'),\n",
-    "    MaxPooling2D(pool_size=(2, 2)),\n",
-    "    Dropout(0.25),\n",
-    "    Flatten(),\n",
-    "    Dense(128, activation='relu'),\n",
-    "    Dropout(0.5),\n",
-    "    Dense(num_classes, activation='softmax')\n",
-    "])\n",
+    "model = create_model()\n",
     "\n",
     "# L2 Regularized model\n",
     "# model = Sequential([\n",
@@ -253,20 +280,60 @@
     "# ])\n",
     "\n",
     "# Compile the model\n",
-    "model.compile(optimizer='adam',\n",
-    "              loss='categorical_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
+    "optimizer = Adam(learning_rate=0.001)\n",
+    "model.compile(optimizer=optimizer,\n",
+    "    loss='categorical_crossentropy',\n",
+    "    metrics=['accuracy'])\n",
     "\n",
     "# Train the model\n",
-    "history = model.fit(X_tr, Y_tr, epochs=10, batch_size=32, validation_data=(X_val, Y_val))\n",
+    "# datagen = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "#     rotation_range=20,\n",
+    "#     width_shift_range=0.2,\n",
+    "#     height_shift_range=0.2,\n",
+    "#     horizontal_flip=True,\n",
+    "#     fill_mode='nearest'\n",
+    "# )\n",
+    "# datagen.fit(X_tr)\n",
+    "\n",
+    "\n",
+    "# Train the model\n",
+    "start_time = time.time()\n",
+    "epochs = 10\n",
+    "batch_size = 32\n",
+    "\n",
+    "early_stopping = EarlyStopping(\n",
+    "    monitor='val_loss',\n",
+    "    patience=10,\n",
+    "    restore_best_weights=True,\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "reduce_lr = ReduceLROnPlateau(\n",
+    "    monitor='val_loss',\n",
+    "    factor=0.2,\n",
+    "    patience=5,\n",
+    "    min_lr=1e-6,\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "training_time = time.time() - start_time\n",
+    "\n",
+    "history = model.fit(\n",
+    "    X_tr, \n",
+    "    Y_tr,\n",
+    "    batch_size=32,\n",
+    "    epochs=10,\n",
+    "    validation_data=(X_val, Y_val),\n",
+    "    callbacks=[early_stopping, reduce_lr],\n",
+    "    verbose=1 \n",
+    ")\n",
     "\n",
     "# Evaluate the model\n",
     "loss, accuracy = model.evaluate(X_val, Y_val)\n",
     "print(f\"Test Accuracy: {accuracy * 100:.2f}%\")\n",
     "\n",
     "end = time.time()\n",
-    "print(f\"It took {end-start} seconds.\")\n",
-    "\n",
+    "print(f\"Training took {end-start} seconds.\")\n",
     "\n"
    ]
   },
